--- a/package.json
+++ b/package.json
@@ -10,14 +10,33 @@
     "package.json",
     "README.md"
   ],
+  "scripts": {
+    "doc": "webpack-dev-server --config scripts/webpack.doc.js --progress",
+    "doc:build": "webpack --config scripts/webpack.doc.build.js --progress",
+    "doc:publish": "npm run doc:build && node ./scripts/gh-pages.js"
+  },
   "peerDependencies": {
     "better-scroll": "^1.15.2",
     "react": "^16.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "better-scroll": "^1.15.2",
+    "clean-webpack-plugin": "^2.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "gh-pages": "^2.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "webpack": "^4.30.0"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
